# dazzlingPlatinum

./: CLAUDE.md  MEGA_EVOLUTION_PROGRESS.md
.github/workflows/: build.yml
asm/macros/: scrcmd.inc
include/applications/pokedex/: pokedex_sort.h
include/battle/: battle_context.h  battle_controller_player.h  mega_evolution.h  struct_ov16_02260C00.h
include/constants/: forms.h  items.h
include/struct_defs/: pokemon_mega_data.h
platinum.us/: main.lsf
res/field/events/: events_route_206.json
res/field/scripts/: scripts_amity_square.s  scripts_canalave_city.s  scripts_celestic_town_cave.s  scripts_eterna_city.s  scripts_eterna_city_underground_man_house.s  scripts_field_moves.s  scripts_fight_area.s  scripts_iron_island.s  scripts_jubilife_city.s  scripts_jubilife_tv_2f.s  scripts_oreburgh_gate_1f.s  scripts_pastoria_city.s  scripts_pokemon_league_north_pokecenter_1f.s  scripts_route_201.s  scripts_route_203.s  scripts_route_209_gate_to_hearthome_city.s  scripts_route_217_west_house.s  scripts_solaceon_ruins_room_2.s  scripts_spear_pillar.s  scripts_sunyshore_city.s  scripts_survival_area.s  scripts_trainers_school.s  scripts_unk_0404.s  scripts_veilstone_city.s  scripts_veilstone_city_gym.s  scripts_veilstone_city_pokecenter_1f.s  scripts_veilstone_store_1f.s
res/graphics/item_icons/: item_icon.order  mega_stone.pal  meson.build
res/graphics/pokedex/: type_icons_anim.json  type_icons_cell.json
res/items/: pl_item_data.csv
res/pokemon/: meson.build
res/pokemon/alakazam/: meson.build
res/pokemon/alakazam/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/arceus/: meson.build
res/pokemon/azumarill/: data.json
res/pokemon/azurill/: data.json
res/pokemon/burmy/: meson.build
res/pokemon/castform/: meson.build
res/pokemon/cherrim/: meson.build
res/pokemon/clamperl/: data.json
res/pokemon/clefable/: data.json
res/pokemon/clefairy/: data.json
res/pokemon/cleffa/: data.json
res/pokemon/deoxys/: meson.build
res/pokemon/dusclops/: data.json
res/pokemon/egg/: meson.build
res/pokemon/electabuzz/: data.json
res/pokemon/garchomp/: meson.build
res/pokemon/garchomp/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/gardevoir/: data.json  meson.build
res/pokemon/gardevoir/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/gastrodon/: meson.build
res/pokemon/gengar/: meson.build
res/pokemon/gengar/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/giratina/: meson.build
res/pokemon/granbull/: data.json
res/pokemon/gyarados/: meson.build
res/pokemon/gyarados/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/haunter/: data.json
res/pokemon/igglybuff/: data.json
res/pokemon/jigglypuff/: data.json
res/pokemon/kadabra/: data.json
res/pokemon/kirlia/: data.json
res/pokemon/lucario/: meson.build
res/pokemon/lucario/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/magmar/: data.json
res/pokemon/marill/: data.json
res/pokemon/mawile/: data.json
res/pokemon/mime_jr/: data.json
res/pokemon/mr_mime/: data.json
res/pokemon/onix/: data.json
res/pokemon/poliwhirl/: data.json
res/pokemon/porygon/: data.json
res/pokemon/porygon2/: data.json
res/pokemon/ralts/: data.json
res/pokemon/rhydon/: data.json
res/pokemon/rotom/: meson.build
res/pokemon/scizor/: meson.build
res/pokemon/scizor/forms/mega/: back.png.key  front.png.key  normal.pal  shiny.pal
res/pokemon/scyther/: data.json
res/pokemon/seadra/: data.json
res/pokemon/shaymin/: meson.build
res/pokemon/shellos/: meson.build
res/pokemon/slowpoke/: data.json
res/pokemon/snubbull/: data.json
res/pokemon/togekiss/: data.json
res/pokemon/togepi/: data.json
res/pokemon/togetic/: data.json
res/pokemon/unown/: meson.build
res/pokemon/wigglytuff/: data.json
res/pokemon/wormadam/: meson.build
res/text/: ability_descriptions.json  ability_names.json  ability_names_uppercase.json  battle_strings.json  item_descriptions.json  item_names.json  item_names_plural.json  item_names_with_articles.json  move_descriptions.json  move_names.json  move_names_uppercase.json  pokedex.json  pokemon_type_names.json  unk_0360.json  veilstone_city_gym.json
res/trainers/data/: champion_cynthia.json  champion_cynthia_rematch.json  dawn_jubilife_city_bagon.json  dawn_jubilife_city_dratini.json  dawn_jubilife_city_gible.json  dawn_veilstone_city_bagon.json  dawn_veilstone_city_dratini.json  dawn_veilstone_city_gible.json  lucas_jubilife_city_bagon.json  lucas_jubilife_city_dratini.json  lucas_jubilife_city_gible.json  lucas_veilstone_city_bagon.json  lucas_veilstone_city_dratini.json  lucas_veilstone_city_gible.json  rival_canalave_city_bagon.json  rival_canalave_city_dratini.json  rival_canalave_city_gible.json  rival_fight_area_bagon.json  rival_fight_area_dratini.json  rival_fight_area_gible.json  rival_pastoria_city_bagon.json  rival_pastoria_city_dratini.json  rival_pastoria_city_gible.json  rival_pokemon_league_bagon.json  rival_pokemon_league_dratini.json  rival_pokemon_league_gible.json  rival_route_201_bagon.json  rival_route_201_dratini.json  rival_route_201_gible.json  rival_route_203_bagon.json  rival_route_203_dratini.json  rival_route_203_gible.json  rival_route_209_bagon.json  rival_route_209_dratini.json  rival_route_209_gible.json  rival_spear_pillar_bagon.json  rival_spear_pillar_dratini.json  rival_spear_pillar_gible.json  rival_survival_area_1_bagon.json  rival_survival_area_1_dratini.json  (+7 more)
src/: field_map_change.c  item.c  item_use_functions.c  meson.build  pokemon.c  pokemon_mega_data.c  scrcmd_amity_square.c  system_vars.c  type_icon.c  unk_0205DFC4.c
src/applications/bag/: windows.c
src/battle/: battle_controller_player.c  battle_cursor.c  battle_display.c  battle_lib.c  mega_evolution.c
src/choose_starter/: choose_starter_app.c
src/overlay006/: hm_cut_in.c
src/overlay007/: shop_menu.c
src/overlay011/: move_palettes.c
tools/: process_mega_sprites.py
(+18 files in other folders)
