species_data_files += files('data.json')

poke_icon_files += files('icon.png')

pokegra_files += files('female_back.png')
pokegra_files += files('male_back.png')
pokegra_files += files('female_front.png')
pokegra_files += files('male_front.png')

otherpoke_index += {
    '64': files('forms/base/back.png'),
    '65': files('forms/sunny/back.png'),
    '66': files('forms/rainy/back.png'),
    '67': files('forms/snowy/back.png'),
    '68': files('forms/base/front.png'),
    '69': files('forms/sunny/front.png'),
    '70': files('forms/rainy/front.png'),
    '71': files('forms/snowy/front.png'),
    '172': files('forms/base/normal.pal'),
    '173': files('forms/sunny/normal.pal'),
    '174': files('forms/rainy/normal.pal'),
    '175': files('forms/snowy/normal.pal'),
    '176': files('forms/base/shiny.pal'),
    '177': files('forms/sunny/shiny.pal'),
    '178': files('forms/rainy/shiny.pal'),
    '179': files('forms/snowy/shiny.pal'),
}

pokefoot_files += files('footprint.png')
