species_data_files += files('data.json')

poke_icon_files += files('icon.png')

pokegra_files += files('female_back.png')
pokegra_files += files('male_back.png')
pokegra_files += files('female_front.png')
pokegra_files += files('male_front.png')

otherpoke_index += {
    '92': files('forms/base/back.png'),
    '93': files('forms/sunny/back.png'),
    '94': files('forms/base/front.png'),
    '95': files('forms/sunny/front.png'),
    '200': files('forms/base/normal.pal'),
    '201': files('forms/sunny/normal.pal'),
    '202': files('forms/base/shiny.pal'),
    '203': files('forms/sunny/shiny.pal'),
}

pokefoot_files += files('footprint.png')
