species_data_files += files('data.json')

poke_icon_files += files('icon.png')
manaphy_egg_icon = files('forms/manaphy/icon.png')

otherpoke_index += {
    '132': files('front.png'),
    '133': files('forms/manaphy/front.png'),
    '228': files('normal.pal'),
    '229': files('forms/manaphy/normal.pal'),
}
