species_data_files += files('data.json')

poke_icon_files += files('icon.png')

pokegra_files += files('female_back.png')
pokegra_files += files('male_back.png')
pokegra_files += files('female_front.png')
pokegra_files += files('male_front.png')

otherpoke_index += {
    '158': files('forms/mega/back.png'),
    '159': files('forms/mega/front.png'),
    '266': files('forms/mega/normal.pal'),
    '267': files('forms/mega/shiny.pal'),
}

pokefoot_files += files('footprint.png')
